--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
+    "next": "14.1.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.57.0",
+    "sonner": "^2.0.4",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.47"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
