Conexion con back

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ DB_NAME=coinsdb
 MYSQL_ROOT_PASSWORD=12345
 JWT_SECRET="O4c2bxXNNxn3rIHb5yBLS4FeXVPGXrvJCGL+2omw7Zo="
 JWT_EXPIRES_IN=3600s
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
+NEXT_PUBLIC_API_URL=http://localhost:3000
